gcc/testsuite/gm2/iso/const/fail/testint.mod
MODULE testint ;

CONST
   foo = INT (r) ;

VAR
   r: REAL ;
BEGIN

END testint.
